package level.powerUps;

public class HealthUp {
}
