package level.powerUps;

public class SpeedUp {
}
