package level.tiles;

import level.tiles.Tile;

public abstract class Crossable extends Tile {
}
