package level.tiles;

import com.badlogic.gdx.graphics.g2d.SpriteBatch;

public class PowerUps extends Crossable {

    @Override
    public void render(SpriteBatch batch, int x, int y) {

    }
}
